tests/baselines/reference/tsxAttributeResolution4.errors.txt
tests/cases/conformance/jsx/file.tsx(15,26): error TS2339: Property 'len' does not exist on type 'string'.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		test1: Attribs1;
    	}
    }
    interface Attribs1 {
    	x(n: string): void;
    }
    
    // OK
    <test1 {... {x: (n) => 0} } />;
    
    // Error, no member 'len' on 'string'
    <test1 {... {x: (n) => n.len} } />;
                             ~~~
!!! error TS2339: Property 'len' does not exist on type 'string'.
    